# gpu-warmup

./: BENCHMARKS.md  CMakeLists.txt  HARDWARE.md  vecadd_report.nsys-rep
.github/workflows/: cuda-build.yml
artifacts/: bandwidthTest_pinned.txt  cudaTensorCoreGemm.txt  nvidia-smi.txt  tf32TensorCoreGemm.txt  uname.txt
artifacts/artifacts/: bandwidthTest.txt  bandwidthTest_pageable.txt  bandwidthTest_range.txt  bf16TensorCoreGemm.txt  deviceQuery.txt  jacobiCudaGraphs.txt  lscpu.txt  simpleMultiCopy.txt  vecadd_raw.csv  vecadd_roofline.ncu-rep
src/: vector_add.cu
